// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component dependencies inputs and inject dependencies 1`] = `
<di-component
  elRef={[Function ElementRef]}
  injector={[Function Injector_]}
  testToken={[Function Number]}
>
  <div>
    
    
    <div>
      All dependencies are defined: false
    </div>
    
    
    <div>
      Title: 
    </div>
    
    
    <div>
      Injector: function Injector_(view, elDef) {
          this.view = view;
          this.elDef = elDef;
      }
    </div>
    
    
    <div>
      ElementRef: {"nativeElement":{}}
    </div>
    
    
    <div>
      TestToken: 123
    </div>
    
  
  </div>
  
</di-component>
`;

exports[`Storyshots Component dependencies inputs and inject dependencies with knobs 1`] = `
<di-component
  cd={[Function ViewRef_]}
  elRef={[Function ElementRef]}
  injector={[Function Injector_]}
  knobChanged={[Function Function]}
  setPaneKnobs={[Function Function]}
  testToken={[Function Number]}
>
  <div>
    
    
    <div>
      All dependencies are defined: false
    </div>
    
    
    <div>
      Title: 
    </div>
    
    
    <div>
      Injector: function Injector_(view, elDef) {
          this.view = view;
          this.elDef = elDef;
      }
    </div>
    
    
    <div>
      ElementRef: {"nativeElement":{}}
    </div>
    
    
    <div>
      TestToken: 123
    </div>
    
  
  </div>
  
</di-component>
`;
